# tensor-dynamics

./: .flake8  .gitignore  .nfs3795da7eafa68c1200000f4e  Data_gen_NN_v3.py  Dockerfile  Dockerfile.cpu  Makefile  README.md  entrypoint.sh  headers copy.py  headers.py  push.sh  pyproject.toml  queue.sh  requirements.txt  results.txt  run.sh  submit.sh
config/: configurations.toml  configurations_all.toml  configurations_full.toml  configurations_simple.toml  data.toml
config/statistics/: running_stats_4a5bc.pkl  running_stats_833f8.pkl  running_stats_853c5.pkl
docker/: Dockerfile  entrypoint.sh
eli/: Data_gen_NN_v3.py  Make_Training_Data_v3.py  v11.py
results/: config_B_error_log.json  config_C_error_log.json
results/comparisons/: summary.txt
results/config_A_20231017184307/: model_architecture.json  training_info.json
results/config_A_20231017194534/: model_architecture.json
results/config_Alex_20231017184305/: model_architecture.json  training_info.json
results/config_Alex_20231017192610/: training_info.json
results/config_Complex_P_20231017194123/: training_info.json
results/config_P_20231017192710/: model_architecture.json
slurm/: Apptainer.def  build-gpu.sh  build.sh  clean_logs.sh  logs.sh  move_logs.sh  parallel-gpu.sh  parallel.sh  parallel_submit.sh  slurm-65633479.out  slurm-65633480.out  slurm-65633481.out  slurm-65633482.out  slurm-65633483.out  slurm-65633484.out  slurm-65633485.out  stop.sh  submit-gpu.sh  submit.sh
src/: __init__.py  analysis.py  data copy.py  data.py  data_dynamic copy.py  data_dynamic.py  data_static.py  main copy 2.py  main copy 3.py  main copy.py  main.py  main_static.py  mainnew.py  process.py  utils.py
src/datagen/: __init__.py  data.toml  dataset copy 2.py  dataset copy 3.py  dataset copy 4.py  dataset copy 5.py  dataset copy.py  dataset.py  dataset_utils.py  euqality_test.py  generator.py  main copy 2.py  main copy.py  main.py  main_euqality_test.py  main_normalization_quantization.py  michaelis.py  runningstats.py  statistics.py  statistics.toml  tf_dataset copy 2.py  tf_dataset copy.py  tf_dataset.py  utils.py
src/dataset/: dataset_generator.py  michaelis.py  statistics_generator.py  tf_data_uilities.py
src/deepnn/: __init__.py  callback.py  datasets.py  metrics.py  model.py  other.py  utils.py
src/legacy_code/: data_static.py  dataset_utils.py  headers.py  main_euqality_test.py  main_normalization_quantization.py  main_static.py  (+2 more)
(+61 files in other folders)
